=== master

* Don't swallow exception if there is an exception when rolling back a transaction when using :rollback=>:always option (jeremyevans)

* Deprecate passing 2 arguments to Database#alter_table (jeremyevans)

* Deprecate passing Schema::CreateTableGenerator instance as second argument to Database#create_table (jeremyevans)

* Deprecate Database::DatasetClass as a way for getting default dataset classes for datasets (jeremyevans)

* Deprecate SQLite pragma getting and setting methods (jeremyevans)

* Remove handling of EMULATED_FUNCTION_MAP from adapter dataset classes, overide Dataset#native_function_name instead (jeremyevans)

* Deprecate {Integer,Timestamp}Migrator::DEFAULT_SCHEMA_{COLUMN,TABLE} (jeremyevans)

* Deprecate Database#jdbc_* methods for jdbc/db2 adapter Database instances (jeremyevans)

* Remove addition of Database#jdbc_* to JDBC::Database in jdbc/db2 adapter (jeremyevans)

* Deprecate many internal Database string/regexp constants in core and included adapters (jeremyevans)

* Remove use of Fixnum in sqlanywhere shared adapter (jeremyevans)

* Deprecate Sequel::Schema::Generator constant, use Sequel::Schema::CreateTableGenerator instead (jeremyevans)

* Deprecate Database#log_yield (jeremyevans)

* Deprecate the set_overrides extension (jeremyevans)

* If passing an empty array or hash and a block to a filtering method, ignore the array or hash and just use the block (jeremyevans)

* Deprecate ignoring explicit nil argument when there is no existing filter (jeremyevans)

* Deprecate ignoring explicit nil argument to filtering methods when passing a block (jeremyevans)

* Deprecate ignoring empty strings and other empty? arguments passed to the filtering methods without a block (jeremyevans)

* Deprecate calling filtering methods without an argument or a block (jeremyevans)

* Deprecate Sequel::VirtualRow#` to create literal SQL, use Sequel.lit instead (jeremyevans)
