@@ -56,7 +56,7 @@ module Sequel
       datasets = datasets.collect{|ta, ds| [ta, ds, ds.row_proc]}
       # Use the manually set graph aliases, if any, otherwise
       # use the ones automatically created by .graph
-      column_aliases = @opts[:graph_aliases] || @opts[:graph][:column_aliases]
+      column_aliases = @opts[:graph_aliases] || @opts[:graph][:column_aliases] # SEQUEL5: Remove :graph_aliases support
       fetch_rows(sql) do |r|
         graph = {}
         # Create the sub hashes, one per table
