@@ -1,5 +1,7 @@
 === master
 
+* Deprecate calling Dataset#set_graph_aliases before Dataset#graph (jeremyevans)
+
 * Don't swallow exception if there is an exception when rolling back a transaction when using :rollback=>:always option (jeremyevans)
 
 * Deprecate passing 2 arguments to Database#alter_table (jeremyevans)
